--- a/index.html
+++ b/index.html
@@ -538,18 +538,18 @@
 						style="background-image: url(images/opensource.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://github.com/NIKITA320495/Stackoverflow-Analysis">Dashboard for stackoverflow</a></h3>
+							<h3><a href="https://nikita320495-stackoverflow-analysis-streamlithome-wwyngh.streamlit.app/">Dashboard for stackoverflow</a></h3>
 							<span>Data Science</span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/krishitech2.png);">
+						style="background-image: url(images/Blinkit-Analysis\ Dashboard_page-0001.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">krishi-Tech</a></h3>
-							<span>Machine learning and web development</span>
+							<h3><a href="https://github.com/NIKITA320495/Blinkit-Analysis">Blinkit-Analysis</a></h3>
+							<span>with Python, SQL and Power bi</span>
 						</div>
 					</div>
 				</div>
