--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/waste2.png);">
+						style="background-image: url(images/bank_customer_churn\ prediction.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="#">Ai-wasteguard</a></h3>
