--- a/index.html
+++ b/index.html
@@ -558,18 +558,18 @@
 						style="background-image: url(images/bank_customer_churn\ prediction.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Ai-wasteguard</a></h3>
-							<span>Deep learning</span>
+							<h3><a href="#">Bank Customer Churn Prediction </a></h3>
+							<span>Machine learning </span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/opensource\ \(2\).png);">
+						style="background-image: url(images/linkedin.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Dashboard for stackoverflow</a></h3>
-							<span>Data Science</span>
+							<h3><a href="https://nikita320495-sentiment-analysis-app-4ghpu0.streamlit.app/">Linkedin Sentiment Analysis</a></h3>
+							<span>NLP</span>
 						</div>
 					</div>
 				</div>
@@ -614,7 +614,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="#">Top 5 teams</a></h3>
-							<span>selected in top 5 teams in vigyaan hackathon out of 100+ participating teams</span>
+							<span>selected in top 5 teams in vigyaan hackathon out of 400+ participating teams</span>
 						</div>
 					</div>
 				</div>
@@ -644,7 +644,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="#">3rd Position</a></h3>
-							<span>3rd position in build with delhi hackathon which included 400+participating
+							<span>3rd position in build with delhi hackathon which included 500+participating
 								teams</span>
 						</div>
 					</div>
