--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 					<div class="text text-center">
 						<span class="subheading">Hey! I am</span>
 						<h1>Nikita Babbar</h1>
-						<h2>I'm a
+						<h2>I'm Proficient in
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "Data Scientist", "Data Analyst","Machine learning Engineer"]'></span>
+								data-rotate='[ "Data Science", "Machine learning","Data analytics","Deep learning","Natural Language Processing"]'></span>
 						</h2>
 					</div>
 				</div>
@@ -105,7 +105,7 @@
 					</div>
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
-							<p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+							<p><a href="https://drive.google.com/file/d/1qRSZQRfUpzvhX1nY5Qb7U4SjyMf1x03V/view?usp=sharing" download="Nikita_Resume.pdf" class="btn btn-primary py-3 px-3">Download Resume</a></p>
 						</div>
 					</div>
 				</div>
@@ -142,7 +142,7 @@
 									Indraprastha University East Delhi Campus</span>
 								<p>Currently pursuing a BTech in Artificial Intelligence and Data Science, I have
 									developed a strong foundation in machine learning, deep learning, and data science.
-									I have also gained experience in Python, R, SQL and statistics with a cgpa of 8.66
+									I have also gained experience in Python, Machine learning , SQL and statistics with a cgpa of 8.66
 								</p>
 							</div>
 						</div>
@@ -154,7 +154,9 @@
 								<span class="date"></span>
 								<h2>Class 10th and 12th</h2>
 								<span class="position">Kamal Model Sr Sec School</span>
-								<p>I got 93.6% in class 10th and 94.8% in class 12th</p>
+								<p>Class 10th percentage: 93.6% 
+									<br>
+									Class 12th percentage: 94.8%</p>
 							</div>
 						</div>
 
@@ -166,7 +168,7 @@
 									<span class="flaticon-ideas"></span>
 								</div>
 								<div class="text pl-3">
-									<h2>IBM Skillsbuild Internship </h2>
+									<h2 style="color: black;"><a href="https://drive.google.com/file/d/1OD9fUq7I8eZodY3j24fRvYmAAomCDj_R/view?usp=sharing">IBM Skillsbuild Internship in Data analytics</a></h2>
 									<span class="position">IBM</span>
 									<p>A small river named Duden flows by their place and supplies it with the necessary
 										regelialia. It is a paradisematic country, in which roasted parts of sentences
@@ -178,8 +180,10 @@
 									<span class="flaticon-ideas"></span>
 								</div>
 								<div class="text pl-3">
-									<h2>Open source contribution</h2>
-									<span class="position">GirlScript summer of code</span>
+									<h2> <a href="https://drive.google.com/drive/folders/1DNpYLc5o18-0LEkQt4ihaxih5lKx9rit?usp=sharing">Open source contribution</a></h2>
+									<span class="position">GirlScript Summer of code</span>
+									<br>
+									<span class="position">Social Summer of code</span>
 									<p>A small river named Duden flows by their place and supplies it with the necessary
 										regelialia. It is a paradisematic country, in which roasted parts of sentences
 										fly into your mouth.</p>
@@ -388,26 +392,14 @@
 										<span class="flaticon-ideas"></span>
 									</div>
 									<div class="text pl-3">
-										<h2>Top 15 teams out of 900+</h2>
-										<span class="position">Code Cubicle Hackathon</span>
+										<h2>2nd Position</h2>
+										<span class="position">CodeX Space hackathon</span>
 										<p>A small river named Duden flows by their place and supplies it with the
 											necessary regelialia. It is a paradisematic country, in which roasted parts
 											of sentences fly into your mouth.</p>
 									</div>
 								</div>
-								<div class="resume-wrap d-flex ftco-animate">
-									<div class="icon d-flex align-items-center justify-content-center">
-										<span class="flaticon-ideas"></span>
-									</div>
-									<div class="text pl-3">
-										<span class="date">2014-2015</span>
-										<h2>Art &amp; Creative Director</h2>
-										<span class="position">Cambridge University</span>
-										<p>A small river named Duden flows by their place and supplies it with the
-											necessary regelialia. It is a paradisematic country, in which roasted parts
-											of sentences fly into your mouth.</p>
-									</div>
-								</div>
+								
 							</div>
 						</div>
 					</div>
@@ -675,11 +667,11 @@
 
 			<div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-					style="background-image: url(images/IMG-20240726-WA0038.jpg);">
+					style="background-image: url(images/codex.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="#">Dashboard for stackoverflow</a></h3>
-						<span>Data Science</span>
+						<h3><a href="#">2nd Position</a></h3>
+						<span>CodeX space hackathon</span>
 					</div>
 				</div>
 			</div>
