--- a/index.html
+++ b/index.html
@@ -168,6 +168,18 @@
 									<span class="flaticon-ideas"></span>
 								</div>
 								<div class="text pl-3">
+									<h2 style="color: black;"><a href="https://drive.google.com/file/d/1OD9fUq7I8eZodY3j24fRvYmAAomCDj_R/view?usp=sharing">Machine learning Internship</a></h2>
+									<span class="position">GGSIPU</span>
+									<p>A small river named Duden flows by their place and supplies it with the necessary
+										regelialia. It is a paradisematic country, in which roasted parts of sentences
+										fly into your mouth.</p>
+								</div>
+							</div>
+							<div class="resume-wrap d-flex ftco-animate">
+								<div class="icon d-flex align-items-center justify-content-center">
+									<span class="flaticon-ideas"></span>
+								</div>
+								<div class="text pl-3">
 									<h2 style="color: black;"><a href="https://drive.google.com/file/d/1OD9fUq7I8eZodY3j24fRvYmAAomCDj_R/view?usp=sharing">IBM Skillsbuild Internship in Data analytics</a></h2>
 									<span class="position">IBM</span>
 									<p>A small river named Duden flows by their place and supplies it with the necessary
@@ -184,6 +196,19 @@
 									<span class="position">GirlScript Summer of code</span>
 									<br>
 									<span class="position">Social Summer of code</span>
+									<p>A small river named Duden flows by their place and supplies it with the necessary
+										regelialia. It is a paradisematic country, in which roasted parts of sentences
+										fly into your mouth.</p>
+								</div>
+							</div>
+							<div class="resume-wrap d-flex ftco-animate">
+								<div class="icon d-flex align-items-center justify-content-center">
+									<span class="flaticon-ideas"></span>
+								</div>
+								<div class="text pl-3">
+									<h2> <a href="https://drive.google.com/drive/folders/1DNpYLc5o18-0LEkQt4ihaxih5lKx9rit?usp=sharing">Volunteering</a></h2>
+									<span class="position">India CSR and ESG Summit 2024</span>
+									
 									<p>A small river named Duden flows by their place and supplies it with the necessary
 										regelialia. It is a paradisematic country, in which roasted parts of sentences
 										fly into your mouth.</p>
@@ -399,6 +424,16 @@
 											of sentences fly into your mouth.</p>
 									</div>
 								</div>
+								<div class="resume-wrap d-flex ftco-animate">
+									<div class="icon d-flex align-items-center justify-content-center">
+										<span class="flaticon-ideas"></span>
+									</div>
+									<div class="text pl-3">
+										<h2>3rd position</h2>
+										<span class="position">Veshack hackathon</span>
+										<p>won 3rd position in veshack hackathon cash price-25k</p>
+									</div>
+								</div>
 								
 							</div>
 						</div>
@@ -516,22 +551,22 @@
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/waste-1.png);">
+						style="background-image: url(images/jobfit\ \(2\).png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://github.com/NIKITA320495/marine-waste-detection-project">Ai-wasteguard</a></h3>
-							<span>Deep learning</span>
+							<h3><a href="https://github.com/NIKITA320495/marine-waste-detection-project">Jobfit-Ai</a></h3>
+							<span>LLM and NLP</span>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/opensource.png);">
+						style="background-image: url(images/electricity.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://nikita320495-stackoverflow-analysis-streamlithome-wwyngh.streamlit.app/">Dashboard for stackoverflow</a></h3>
-							<span>Data Science</span>
+							<h3><a href="https://nikita320495-stackoverflow-analysis-streamlithome-wwyngh.streamlit.app/">Electricity price prediction using hybrid model </a></h3>
+							<span>Deep learning</span>
 						</div>
 					</div>
 				</div>
@@ -547,21 +582,21 @@
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/bank_customer_churn\ prediction.png);">
+						style="background-image: url(images/opensource.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Bank Customer Churn Prediction </a></h3>
-							<span>Machine learning </span>
+							<h3><a href="#">Stackoverflow Analysis</a></h3>
+							<span>Data Science</span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/linkedin.png);">
+						style="background-image: url(images/E-commerce\ dashboard1_pages-to-jpg-0001.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://nikita320495-sentiment-analysis-app-4ghpu0.streamlit.app/">Linkedin Sentiment Analysis</a></h3>
-							<span>NLP</span>
+							<h3><a href="https://nikita320495-sentiment-analysis-app-4ghpu0.streamlit.app/">Ecommerce Analysis Analysis</a></h3>
+							<span>Data Analysis</span>
 						</div>
 					</div>
 				</div>
@@ -573,7 +608,7 @@
 			<div class="row no-gutters justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Projects</h1>
-					<h2 class="mb-4">My journey</h2>
+					<h2 class="mb-4">From Curiosity to Expertise</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 				</div>
 			</div>
@@ -612,20 +647,20 @@
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/IMG-20240726-WA0038.jpg);">
+						style="background-image: url(images/IMG-20240726-WA0040.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Student of the year runner-up</a></h3>
-							<span>i was the student of the year runner up in our university</span>
+							<h3><a href="#">Contributor in Girlscript summer of code</a></h3>
+							<span>I started my open source journey from Girlscript summer of code</span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/IMG-20240726-WA0040.jpg);">
+						style="background-image: url(images/ms1.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Contributor in Girlscript summer of code</a></h3>
+							<h3><a href="#">Attended open source session at microsoft</a></h3>
 							<span>I started my open source journey from Girlscript summer of code</span>
 						</div>
 					</div>
@@ -656,6 +691,16 @@
 			</div>
 			<div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+					style="background-image: url(images/lambdatest.jpg);width: 100%;background-position:top">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3><a href="#">attended event at lambdatest</a></h3>
+						<span>Code Cubicle 2.0 Hackathon</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 					style="background-image: url(images/code_cubicle.jpg);width: 100%;background-position:top">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
@@ -677,31 +722,31 @@
 			</div>
 			<div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-					style="background-image: url(images/IMG-20240726-WA0039.jpg);">
+					style="background-image: url(images/sih.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="#">krishi-Tech</a></h3>
-						<span>Machine learning and web development</span>
+						<h3><a href="#">Lead organizer</a></h3>
+						<span>SIH internal hackathon,GGSIPU</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-					style="background-image: url(images/IMG-20240726-WA0040.jpg);">
+					style="background-image: url(images/csrbox.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="#">Ai-wasteguard</a></h3>
-						<span>Deep learning</span>
+						<h3><a href="#">Volunteering</a></h3>
+						<span>India CSR and ESG summit 2024</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-					style="background-image: url(images/IMG-20240726-WA0042.jpg);">
+					style="background-image: url(images/veshack.jpg);">
 					<div class="overlay"></div>
 					<div class="text text-center p-4">
-						<h3><a href="#">Dashboard for stackoverflow</a></h3>
-						<span>Data Science</span>
+						<h3><a href="#">3rd position</a></h3>
+						<span>Veshack Hackathon</span>
 					</div>
 				</div>
 			</div>
